# ai_toy2

./: CLAUDE.md  README.md  pyproject.toml  test_cuda.py  test_cuda_clean.py  voice_assistant.py
backend/: __init__.py
backend/services/: __init__.py  kyutai_service.py  metrics_api.py  metrics_export.py  metrics_service.py  ollama_service.py  smart_turn_vad.py  stt_service.py  timing_decorators.py  tts_service.py
certs/: localhost-key.pem  localhost.pem
config/: settings.yaml
logs/: performance_summary_20250831_154423.json  performance_summary_20250831_163020.json  performance_summary_20250831_163226.json
static/: index.html  pcm-processor.js  script.js  style.css
updates/: 2025-08-29_final_cleanup_fix.md  2025-08-29_final_logic.md  2025-08-29_final_refactor.md  2025-08-29_kyutai_upgrade.md  2025-08-29_major_performance_fixes.md  2025-08-29_refactor.md  2025-08-29_turnbased.md  2025-08-29_webrtc_vad_enhancement.md  complete_metrics_system_implementation_2025-08-31_22-30.md  complete_voice_assistant_fixes_2025-08-30_16-45.md  cuda_conflicts_resolved_2025-08-31_16-11.md  final_kokoro_voice_fix_2025-08-30_16-35.md  fix_remaining_voice_issues_2025-08-30_16-25.md  fix_voice_cutoff_issue_2025-08-30_16-06.md  gpu_and_vad_fixes_2025-08-31_23-00.md  ui_status_indicators_fix_2025-08-30_17-05.md  voice_ai_analysis_and_recommendations_2025-08-31_21-45.md
